# uv-nix-bundle-example

./: .gitignore  flake.nix  pyproject.toml
src/myapp/: __init__.py
